Sat Jun  6 21:28:20 2009  Minero Aoki  <aamine@loveruby.net>

	* sysdep/x86/CodeGenerator.java: refactoring: rename method:
	  allocateParameters -> locateParameters.

	* sysdep/x86/CodeGenerator.java: refactoring: rename method:
	  allocateLocalVariablesTemp -> locateLocalVariables.

	* sysdep/x86/CodeGenerator.java: refactoring: rename method:
	  allocateLocalVariables -> fixLocalVariableOffsets.

Mon Jun  1 06:39:57 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  rename method: save -> store.

Mon Jun  1 05:43:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (load, save):
	  reduce # of arguments.

Mon Jun  1 03:55:41 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (Bin): optimize
	  more patterns.

Sun May 31 22:32:29 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  rename method.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (Int): simplify
	  code.

Wed May 27 01:59:03 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: remove unused
	  methods.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: reduce Type
	  argument.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: follow
	  changes.

Tue May 26 16:52:18 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/NamedSymbol.java (dump): dump name as
	  string.

Tue May 26 16:07:33 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: --dump-asm now dumps
	  AssemblyFile.

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --print-asm, prints assembly source text.

	* net/loveruby/cflat/compiler/CompilerMode.java: new enum
	  PrintAsm.

	* net/loveruby/cflat/compiler/Options.java: new option
	  --print-asm.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: new method
	  #dump.
